--- a/ejem4css.html
+++ b/ejem4css.html
@@ -8,15 +8,11 @@
                 text-align: center;
                 color: red;
             }
-            #para1{
-                font-size: 24px;
-                color: green;
-            }
         </style>
     </head>
     <body>
         <p>Este párrafo esta afectado por el estilo.</p>
-        <p id="para1">Y yo también pero prevalece el estilo de mi id</p>
+        <p>Y yo también</p>
         <p>Y yo</p>
     </body>
 </html>
