--- a/ejem4css/ejem4css.html
+++ b/ejem4css/ejem4css.html
@@ -3,12 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title> Sintaxis CSS</title>
-        <style>
-            p{
-                text-align: center;
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="ejem4.css">
     </head>
     <body>
         <p>Este párrafo esta afectado por el estilo.</p>
