--- a/ejem10css/ejem10css.html
+++ b/ejem10css/ejem10css.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="ejem10.css">
+    </head>
     <body>
-        <h3 style="color:Tomato;">Hello Wolrd</h3>
-        <p style="color:DodgerBlue;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+        <h3>Hello Wolrd</h3>
+        <p id="para1">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
         sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat colutpat.</p>
-        <p style="color:MediumSeaGreen;">Ut wisi enim ad minim veniam, quis nostrud exerci
+        <p id="para2">Ut wisi enim ad minim veniam, quis nostrud exerci
         tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
     </body>
 </html>
