--- a/ejem11css/ejem11css.html
+++ b/ejem11css/ejem11css.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="ejem11.css">
+    </head>
     <body>
-        <h1 style="border: 2px solid Tomato;">Hello Wolrd</h1>
-        <h1 style="border: 2px solid DodgerBlue;">Hello Wolrd</h1>
-        <h1 style="border: 2px solid Violet;">Hello Wolrd</h1>
+        <h1 id="para1">Hello Wolrd</h1>
+        <h1 id="para2">Hello Wolrd</h1>
+        <h1 id="para3">Hello Wolrd</h1>
     </body>
 </html>
