--- a/ejem6css/ejem6css.html
+++ b/ejem6css/ejem6css.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            .center{
-                text-align: center;
-                color: red;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="ejem6.css">
     </head>
     <body>
 
