--- a/ejem8css/ejem8css.html
+++ b/ejem8css/ejem8css.html
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            p.center{
-                text-align: center;
-                color: red;
-            }
-            p.large{
-                font-size: 300%;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css" href="ejem8.css">
     </head>
     <body>
 
